--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,8 +13,8 @@
  
 <div class="container" ng-app="app">
  
-    <h3 style="color:green"> My Awesome Spring Boot App Running on EKS Cluster </h3>
-    
+    <h3 style="color:green"> This is my springboot application  </h3>
+    ## My Awesome Spring Boot App Running on EKS Cluster
     <div ng-controller="postcontroller">
         <form class="form-horizontal" name="customerForm" ng-submit="submitForm()">
             <div class="form-group">
